[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yet"
version = "0.0.1"
authors = [
  { name="Agavestorm Inc", email="somehownottaken@gmail.com" },
]
description = "Yet: git based personal task manager"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "appdata>=2",
    "sanitize_filename">=1.2"
]

[project.urls]
"Homepage" = "https://github.com/agavestorm/yet"
"Bug Tracker" = "https://github.com/agavestorm/yet/issues"

[project.scripts]
yet         = "yet:yet.main"
yet-archive = "yet:archive.main"
yet-create  = "yet:create.main"
yet-drop    = "yet:drop.main"
yet-git     = "yet:git.main"
yet-lastid  = "yet:lastid.main"
yet-list    = "yet:list.main"
yet-open    = "yet:open.main"
yet-pick    = "yet:pick.main"
yet-reset   = "yet:reset.main"
yet-scope   = "yet:scope.main"

